errrors.txt
    Checking deno-core-vm v0.2.0 (/Users/scottlott/Developer/deno-core-vm)
error[E0080]: evaluation panicked: assertion failed: buffer.is_ascii() && buffer.len() <= ((1 << 29) - 24)
   --> src/worker/runtime.rs:38:1
    |
 38 | / extension!(
 39 | |     deno_worker_extension,
 40 | |     ops = [
 41 | |         op_denojs_worker_post_message,
...   |
 46 | |     esm = ["src/worker/bootstrap.js"],
 47 | | );
    | |_^ evaluation of `worker::runtime::deno_worker_extension::ext::JS::STR` failed inside this call
    |
note: inside `FastStaticString::create_external_onebyte_const`
   --> /Users/scottlott/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/deno_core-0.386.0/fast_string.rs:46:5
    |
 46 |     v8::String::create_external_onebyte_const(s)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `deno_core::v8::string::<impl deno_core::v8::String>::create_external_onebyte_const`
   --> /Users/scottlott/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/v8-145.0.0/src/string.rs:603:5
    |
603 |     assert!(buffer.is_ascii() && buffer.len() <= ((1 << 29) - 24));
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

note: erroneous constant encountered
  --> src/worker/runtime.rs:38:1
   |
38 | / extension!(
39 | |     deno_worker_extension,
40 | |     ops = [
41 | |         op_denojs_worker_post_message,
...  |
46 | |     esm = ["src/worker/bootstrap.js"],
47 | | );
   | |_^
   |
   = note: this note originates in the macro `$crate::ascii_str_include` which comes from the expansion of the macro `extension` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0080`.
error: could not compile `deno-core-vm` (lib) due to 1 previous error
